fix: resolve correctness issues found in cross-module review
cdc-postgres:
- Do not acknowledge a transaction's LSN when any publication in it
  failed, and do not acknowledge when the checkpoint save fails —
  both previously discarded WAL for unpublished events, violating
  the at-least-once guarantee
- Send periodic standby status updates while the read loop is idle so
  the server does not terminate the connection at wal_sender_timeout
- Quote schema, table, and column identifiers in chunk SQL (mixed-case
  and reserved-word identifiers previously produced wrong or broken
  queries)
- Order composite primary key columns by indkey position rather than
  attnum, fixing keyset pagination for keys declared out of column
  order
- Decode transaction IDs as unsigned, preventing negative txIds once
  XIDs exceed the signed 32-bit range

cdc-runtime-quarkus:
- Make ConnectorBootstrap.reader volatile and synchronise
  requestStart/requestStop to prevent leaked reader threads
- Claim the checkpoint circuit-breaker half-open probe with a CAS and
  stop pre-resetting the failure count, so a failed probe re-opens the
  circuit immediately
- Delegate close() through RetryingEventSink so the Kafka producer is
  flushed and closed on shutdown; clamp retry attempts to at least one
- Reject snapshot trigger requests without a tableName with 400 instead
  of snapshotting a literal 'unknown' table
- Parameterise the row-count catalog query in TablesCommand
- Use Locale.ROOT when parsing the sink retry delay
- Log previously swallowed slot-health query failures

cdc-core:
- Make InMemoryEventSink thread-safe (events arrive from executor and
  WAL reader threads)

Adds unit tests for LSN acknowledgement semantics, chunk SQL quoting,
unsigned XID decoding, and retry sink close/clamp behaviour.